Fix musician list position on narrow screens

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -228,7 +228,7 @@ body:not(.contacts-slide-shown) {
 
   .info-slide {
     ul.musicians {
-      width: 300px;
+      width: 260px;
       li {
         &:nth-child(odd) {
           float: none;
